# attested-tls-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build-deb  Makefile  README.md  build.rs  ca.crt  docker-compose.yml  shell.nix
.github/workflows/: release.yaml  test.yml
attestation/: Cargo.toml
attestation-provider-server/: Cargo.toml
attestation-provider-server/src/: lib.rs  main.rs
attestation/src/: dcap.rs  lib.rs  measurements.rs  test_helpers.rs
attestation/src/azure/: ak_certificate.rs  mod.rs  nv_index.rs
attestation/test-assets/: azure-collateral02.json  dcap-quote-collateral-00.json
attested-tls/: Cargo.toml  README.md
attested-tls/src/: attested_rpc.rs  lib.rs  test_helpers.rs  websockets.rs
attested-tls/src/attestation/: dcap.rs  measurements.rs  mod.rs  pccs.rs  preemptive.rs
attested-tls/src/attestation/azure/: mod.rs
dummy-attestation-server/: Cargo.toml
dummy-attestation-server/src/: lib.rs  main.rs
scripts/: ca.crt  ca.key  ca.srl  check-reproducibility.sh  server.crt  server.csr  server.key
src/: attestation.rs  attested_get.rs  attested_rpc.rs  attested_tls.rs  file_server.rs  health_check.rs  http_version.rs  lib.rs  main.rs  main.rs_  normalize_pem.rs  self_signed.rs  test_helpers.rs  websockets.rs
src/attestation/: azure.rs  dcap.rs  measurements.rs  mod.rs  nv_index.rs  tcb_info.rs
src/attestation/azure/: ak_certificate.rs  mod.rs
test-assets/: measurements.json  measurements_2.json  measurements_list.json
