[workspace]
members = [".", "attestation-provider-server", "attested-tls"]

[package]
name = "attested-tls-proxy"
version = "1.0.3"
edition = "2024"
license = "MIT"
description = "An HTTP attested TLS proxy server and client for secure communication with CVM services"
repository = "https://github.com/flashbots/attested-tls-proxy"
keywords = ["attested-TLS", "CVM", "TDX"]

[dependencies]
attested-tls = { path = "attested-tls", default-features = false }
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = [
  "ring",
] }
x509-parser = { version = "0.18.0", features = ["verify"] }
thiserror = "2.0.17"
clap = { version = "4.5.51", features = ["derive", "env"] }
rustls-pemfile = "2.2.0"
anyhow = "1.0.100"
pem-rfc7468 = { version = "0.7.0", features = ["std"] }
hyper = { version = "1.7.0", features = ["server", "http2"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
http-body-util = "0.1.3"
bytes = "1.11.1"
http = "1.3.1"
serde_json = "1.0.145"
serde = "1.0.228"
base64 = "0.22.1"
reqwest = { version = "0.12.24", default-features = false, features = [
  "rustls-tls-webpki-roots-no-provider",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
time = "0.3.44"
axum = "0.8.6"
tower-http = { version = "0.6.7", features = ["fs"] }
rsa   = { version = "0.9", default-features = false }
p256 = { version = "0.13.2", features = ["pkcs8"] }
pkcs1 = "0.7.5"
pkcs8 = "0.10.2"
rcgen = "0.14.5"
pin-project-lite = "0.2.16"

[dev-dependencies]
tempfile = "3.23.0"
tdx-quote = { version = "0.0.5", features = ["mock"] }
attested-tls = { path = "attested-tls", features = ["test-helpers", "mock"] }
jsonrpsee = { version = "0.26.0", features = ["server"] }

[features]
default = []

# Adds support for Microsoft Azure attestation generation and verification
azure = ["attested-tls/azure"]

[package.metadata.deb]
maintainer = "Flashbots Team <devops+ci@flashbots.net>"
depends = "$auto"
section = "network"
priority = "optional"
maintainer-scripts = "pkg/debian"
assets = [
    [
        "target/reproducible/attested-tls-proxy",
        "usr/bin/",
        "755",
    ],
    [
        "LICENSE",
        "usr/share/doc/attested-tls-proxy/",
        "644",
    ],
]
systemd-units = { enable = false, start = false, unit-name = "attested-tls-proxy" }

[profile.reproducible]
inherits = "release"
lto = "thin"
panic = "abort"
incremental = false
