[package]
name = "attestation"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Attestation generation and verification, and measurement policy handling"
repository = "https://github.com/flashbots/attested-tls-proxy"
keywords = ["attestation", "CVM", "TDX"]

[dependencies]
tokio = { version = "1.48.0", features = ["fs"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = [
  "ring",
] }
x509-parser = "0.18.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
pem-rfc7468 = { version = "0.7.0", features = ["std"] }
configfs-tsm = "0.0.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
dcap-qvl = { git = "https://github.com/flashbots/dcap-qvl.git", branch = "peg/azure-outdated-tcp-override", features = ["danger-allow-tcb-override"] }
hex = "0.4.3"
http = "1.3.1"
serde_json = "1.0.145"
serde = "1.0.228"
base64 = "0.22.1"
reqwest = { version = "0.12.23", default-features = false, features = [
  "rustls-tls-webpki-roots-no-provider",
] }
tracing = "0.1.41"
parity-scale-codec = "3.7.5"
openssl = "0.10.75"
num-bigint = "0.4.6"
webpki = { package = "rustls-webpki", version = "0.103.8" }
time = "0.3.47"
once_cell = "1.21.3"

# Used for azure vTPM attestation support
az-tdx-vtpm = { version = "0.7.4", optional = true }
tss-esapi = { version = "7.6.0", optional = true }

# Used by test helpers
tdx-quote = { version = "0.0.5", features = ["mock"], optional = true }

[dev-dependencies]
tempfile = "3.23.0"
tdx-quote = { version = "0.0.5", features = ["mock"] }

[features]
default = []

# Adds support for Microsoft Azure attestation generation and verification
azure = ["tss-esapi", "az-tdx-vtpm"]

# Exposes helper functions for testing - do not enable in production as this allows dangerous configuration
test-helpers = []

# Allows mock quotes used in tests
mock = ["tdx-quote"]
