[package]
name = "attested-tls"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "A remote-attested TLS protocol for secure communication with CVM services"
repository = "https://github.com/flashbots/attested-tls-proxy"
keywords = ["attested-TLS", "CVM", "TDX"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = [
  "ring",
] }
sha2 = "0.10.9"
x509-parser = "0.18.0"
thiserror = "2.0.17"
webpki-roots = "1.0.4"
anyhow = "1.0.100"
pem-rfc7468 = { version = "0.7.0", features = ["std"] }
configfs-tsm = "0.0.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
dcap-qvl = "0.3.12"
hex = "0.4.3"
http = "1.3.1"
serde_json = "1.0.145"
serde = "1.0.228"
base64 = "0.22.1"
reqwest = { version = "0.12.23", default-features = false, features = [
  "rustls-tls-webpki-roots-no-provider",
] }
tracing = "0.1.41"
parity-scale-codec = "3.7.5"
openssl = "0.10.75"
num-bigint = "0.4.6"
webpki = { package = "rustls-webpki", version = "0.103.8" }
time = "0.3.44"
once_cell = "1.21.3"

# Used for azure vTPM attestation support
az-tdx-vtpm = { version = "0.7.4", optional = true }
tss-esapi = { version = "7.6.0", optional = true }

# Used for websocket support
tokio-tungstenite = { version = "0.28.0", optional = true }
futures-util = { version = "0.3.31", optional = true }

# Used for JSON RPC support
alloy-rpc-client = { version = "1.1.3", optional = true }
tower-service = { version = "0.3.3", optional = true }
alloy-transport-http = { version = "1.4.3", features = ["hyper"], optional = true }
url = { version = "2.5.7", optional = true }
hyper = { version = "1.7.0", features = ["client", "http2"], optional = true }
hyper-util = { version = "0.1.17", features = ["tokio"], optional = true }
bytes = { version = "1.11.1", optional = true }
http-body-util = { version = "0.1.3", optional = true }

# Used by test helpers
rcgen = { version = "0.14.5", optional = true }
tdx-quote = { version = "0.0.5", features = ["mock"], optional = true }

[dev-dependencies]
rcgen = "0.14.5"
tempfile = "3.23.0"
tdx-quote = { version = "0.0.5", features = ["mock"] }

[features]
default = ["ws", "rpc"]

# Adds support for Microsoft Azure attestation generation and verification
azure = ["tss-esapi", "az-tdx-vtpm"]

# Adds websocket support
ws = ["tokio-tungstenite", "futures-util"]

# Adds JSON RPC support
rpc = [
  "alloy-rpc-client",
  "tower-service",
  "alloy-transport-http",
  "url",
  "hyper",
  "hyper-util",
  "bytes",
  "http-body-util",
  "futures-util",
]

# Exposes helper functions for testing - do not enable in production as this allows dangerous configuration
test-helpers = ["rcgen"]

mock = ["tdx-quote"]
