[package]
name = "attested-tls"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "A remote-attested TLS protocol for secure communication with CVM services"
repository = "https://github.com/flashbots/attested-tls-proxy"
keywords = ["attested-TLS", "CVM", "TDX"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = { version = "0.26.4", default-features = false }
sha2 = "0.10.9"
x509-parser = "0.18.0"
thiserror = "2.0.17"
webpki-roots = "1.0.4"
http = "1.3.1"
serde_json = "1.0.145"
tracing = "0.1.41"
parity-scale-codec = "3.7.5"
attestation = { git = "https://github.com/flashbots/attested-tls", branch = "peg/add-attestation-crate" }

# Used for websocket support
tokio-tungstenite = { version = "0.28.0", optional = true }
futures-util = { version = "0.3.31", optional = true }

# Used for JSON RPC support
alloy-rpc-client = { version = "1.1.3", optional = true }
tower-service = { version = "0.3.3", optional = true }
alloy-transport-http = { version = "1.4.3", features = ["hyper"], optional = true }
url = { version = "2.5.7", optional = true }
hyper = { version = "1.7.0", features = ["client", "http2"], optional = true }
hyper-util = { version = "0.1.17", features = ["tokio"], optional = true }
bytes = { version = "1.11.1", optional = true }
http-body-util = { version = "0.1.3", optional = true }

# Used by test helpers
rcgen = { version = "0.14.5", optional = true }

[dev-dependencies]
rcgen = "0.14.5"
tempfile = "3.23.0"
attestation = { git = "https://github.com/flashbots/attested-tls", branch = "peg/add-attestation-crate", features = ["mock"] }

[features]
default = ["ws", "rpc"]

# Adds support for Microsoft Azure attestation generation and verification
azure = ["attestation/azure"]

# Adds websocket support
ws = ["tokio-tungstenite", "futures-util"]

# Adds JSON RPC support
rpc = [
  "alloy-rpc-client",
  "tower-service",
  "alloy-transport-http",
  "url",
  "hyper",
  "hyper-util",
  "bytes",
  "http-body-util",
  "futures-util",
]

# Exposes helper functions for testing - do not enable in production as this allows dangerous configuration
test-helpers = ["rcgen", "attestation/mock"]

mock = ["attestation/mock"]
